src/test/deca/context/invalid/inst_return_in_void_method_voidMethod.deca
// Test la règle 3.24: Pas le droit de return quelque chose alors qu'on attend pas de return

class A  {

    void getInt(){
        int y = 12;
    }

    void voidMethod(){
        return getInt();
    }
}



// Resultat:
//TODOTEST